# astroplatesolving

./: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
clib/: CMakeLists.txt  astroapi.cpp  astroapi.h  build.sh  demo.cpp
clib/libs/astrometry/blind/: blind.c  engine.c  matchobj.c  quad-utils.c  solver.c  tweak2.c  verify.c
clib/libs/astrometry/include/astrometry/: an-thread-pthreads.h  an-thread.h  log.h  thread-specific.inc
clib/libs/astrometry/libkd/: kdtree.c  kdtree_fits_io.c
clib/libs/astrometry/qfits-an/: qfits_error.c  qfits_header.c  qfits_memory.c
clib/libs/astrometry/util/: bl-sort.c  bl.c  codekd.c  errors.c  fit-wcs.c  fitsbin.c  fitsioutils.c  fitstable.c  healpix.c  index.c  ioutils.c  log.c  mathutil.c  qsort_reentrant.c  sip-utils.c  sip.c  starkd.c  tic.c
clib/libs/utils/: extractor_solver.cpp  extractor_solver.h  image_loader.cpp  image_loader.h
config/: config.go
handlers/: http_handlers.go
models/: response.go
routes/: router.go
utils/: c_wrapper.go  c_wrapper_test.go
